# AutoMux

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RULES.md  implementation_plan.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
archive/v1-production/: implementation_plan.md  state.md
docs/: ARCHITECTURE.md  ARCHITECTURE_VALIDATION.md  FAILURE_MODES.md  SUBSYSTEMS.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test.rs  test2.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  persistence.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/macos/: input.rs  mod.rs  observer.rs
src-tauri/src/platform/windows/: mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/state/: mod.rs
